# g_test_mock_free_functions

./: LICENSE  README.md  build_and_run_test.sh
C/: CMakeLists.txt  build_and_run_test.sh
C/inc/: calculator.h
C/test/: calculator_test.cc
CPP/: CMakeLists.txt
CPP/inc/: calculator.h
CPP/test/: calculator_test.cc
test/: calculator_test.cc
